--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <path d="M8 19H16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                             </svg>
                         </div>
-                        <span class="text-base sm:text-xl lg:text-2xl font-semibold text-[#e5e5e5] group-hover:text-[#0084a6] transition-colors duration-150">מנהל תבניות</span>
+                        <span class="text-base sm:text-xl lg:text-2xl font-semibold text-[#e5e5e5]">מנהל תבניות</span>
                     </a>
                         </div>
                 
