--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!-- Logo/Brand - Right side (top-left in RTL on mobile) -->
                 <div class="flex items-center gap-2 sm:gap-3 flex-shrink-0">
                     <a href="#" onclick="navigateToHome(); return false;" class="flex items-center gap-2 sm:gap-3 group">
-                        <div class="text-[#0084a6] group-hover:text-[#006b85] transition-colors duration-150">
+                        <div class="text-[#0084a6]">
                             <svg class="w-6 h-6 sm:w-8 sm:h-8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M14 2H6C5.44772 2 5 2.44772 5 3V21C5 21.5523 5.44772 22 6 22H18C18.5523 22 19 21.5523 19 21V8L14 2Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M14 2V8H19" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -170,7 +170,7 @@
                             
     <!-- Global Footer -->
     <footer id="globalFooter" class="border-t border-[#262626] bg-[#0a0a0a] mt-16 sm:mt-20 lg:mt-24">
-        <div class="max-w-7xl xl:max-w-[90rem] 2xl:max-w-[100rem] mx-auto px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20">
+        <div class="max-w-7xl xl:max-w-[90rem] 2xl:max-w-[100rem] mx-auto px-10 sm:px-12 lg:px-16 py-12 sm:py-16 lg:py-20">
             <!-- Footer Columns -->
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 sm:gap-10 lg:gap-12 mb-8 sm:mb-12">
                 
