Added real Supabase credentials

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     </script>
     <!-- Supabase JS Library -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+    <!-- SortableJS for drag-and-drop -->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
     <!-- Supabase Client Configuration -->
     <script src="supabase-client.js"></script>
     <!-- Supabase Data Layer -->
