--- a/index.html
+++ b/index.html
@@ -51,15 +51,14 @@
             <div class="flex flex-row justify-between items-center gap-3 sm:gap-4 py-3 sm:py-4 relative">
                 <!-- Logo/Brand - Right side (top-left in RTL on mobile) -->
                 <div class="flex items-center gap-2 sm:gap-3 flex-shrink-0">
-                    <a href="#" onclick="navigateToHome(); return false;" class="flex items-center gap-2 sm:gap-3 group">
-                        <div class="text-sky-500">
-                            <svg class="w-6 h-6 sm:w-8 sm:h-8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14 2H6C5.44772 2 5 2.44772 5 3V21C5 21.5523 5.44772 22 6 22H18C18.5523 22 19 21.5523 19 21V8L14 2Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M14 2V8H19" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M8 11H16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                                <path d="M8 15H12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                                <rect x="15" y="14" width="2.5" height="2.5" rx="0.5" stroke="currentColor" stroke-width="1.5" fill="none"/>
-                                <path d="M8 19H16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                    <a href="#" onclick="navigateToHome(); return false;" class="flex items-center gap-2 sm:gap-3">
+                        <div class="logo-checkbox">
+                            <svg class="w-8 h-8 sm:w-10 sm:h-10" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <!-- Checkbox square: 20px viewBox, checkbox is 20px (h-5 w-5), border-radius is 0.5rem (8px) = 40% of size -->
+                                <!-- So rx should be 8/20 = 0.4 of viewBox = 8 units, but we'll use 3.2 (proportional) -->
+                                <rect x="2" y="2" width="16" height="16" rx="3.2" stroke="#0EA5E9" stroke-width="1.5" fill="none"/>
+                                <!-- Checkmark: matching checkbox checkmark style with rounded line caps -->
+                                <path d="M6 10L9 13L14 7" stroke="#0EA5E9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
                             </svg>
                         </div>
                         <span class="text-base sm:text-xl lg:text-2xl font-semibold text-slate-900">מנהל תבניות</span>
